--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -36,4 +36,19 @@
 
 .btn-reset:hover {
   background-color: #f0f0f0;
+}
+
+.toast {
+  padding: 0 20px;
+  height: 50px;
+  color: green;
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 50px;
+  border-radius: 10px;
+  align-items: center;
+  border: 2px solid green;
+  font-weight: bold;
+  box-shadow: 2px 2px 5px 0 green;
 }/*# sourceMappingURL=index.css.map */
